tests/machine/x/c/typed_var.error
line: 0
error: output mismatch
-- got --
0
-- want --
<nil>
   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:55Z
