tests/machine/x/c/typed_var.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:55Z
#include <stdio.h>
#include <stdlib.h>

int main() {
  int x = 0;
  printf("%d\n", x);
  return 0;
}
